# betterjenkins

./: Cargo.toml  README.md  docker-compose.yaml
.github/workflows/: docker-build-and-push.yaml
controller/: Cargo.toml  Dockerfile
controller/examples/: invalid.yaml  sample-complex.yaml  sample.yaml
controller/k8s_manifests/executor/: executor-job.yaml
controller/src/: config.rs  db.rs  main.rs  run.rs  server.rs  threads.rs  workspace.rs
controller/src/run/: executors.rs  mod.rs  server.rs
controller/src/threads/: mod.rs  run.rs  workspace.rs
db/: init.sql
executor/: Dockerfile  requirements.txt  run_task.py
kustomize/: db.yaml  kustomization.yaml  namespace.yaml  server.yaml  service-account.yaml  workspace.yaml
kustomize/executor/: executor-job.yaml
src/: config.rs  main.rs
src/config/: mod.rs
web/: index.html
